# Projects

Bag-Lab1/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ShortTest.cpp  ShortTest.h
BookManager/: README.md
BookManager/src/domain/: Entities.py  Validators.py
BookManager/src/main/: book.txt  books.txt  clients.txt  main.py  rentals.txt  settings.properties
BookManager/src/repository/: BinaryFileBook.py  BinaryFileClient.py  BinaryFileRent.py  Repository.py  TextFileBook.py  TextFileClient.py  TextFileRent.py
BookManager/src/services/: BookService.py  ClientService.py  RentalService.py  Service_Undo_Redo.py  UndoRedo.py
BookManager/src/tests/: BookServiceTest.py  ClientServiceTest.py  RentalServiceTest.py  ServiceTest.py
BookManager/src/ui/: menu.py
CoatStore/: Action.cpp  Action.h  AdminGui.cpp  AdminGui.h  CMakeLists.txt  Domain.cpp  Domain.h  Exceptions.cpp  Exceptions.h  FileRepo.cpp  FileRepo.h  GUI.cpp  GUI.h  HTMLRepo.cpp  HTMLRepo.h  Readme.MD  Repo.cpp  Repo.h  Service.cpp  Service.h  TableMode.cpp  TableMode.h  UI.cpp  UI.h  UserGui.cpp  UserGui.h  Utils.cpp  Utils.h  main.cpp
GameOfLife/: README.md
GameOfLife/src/: 123.txt  1234.txt  UI.py  aaa.txt  anaaaa.txt  board.py  game.py  patterns.txt  repo.py  spaceship  start.py
GameOfLife/src/tests/: patterns.txt  tests.py
Obstruction/: README.md  start.py
Obstruction/Repo/: repo.py
Obstruction/Tests/: test_ai.py  test_board.py  test_validator.py
Obstruction/domain/: Point.py  domain.py  sixsixboard.py
Obstruction/service/: ai.py
Obstruction/ui/: console.py  gui.py
SortedMap-LinkedListOnArray/: App.cpp  CMakeLists.txt
SortedMuliMap-BST/: App.cpp  CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
SortedSet-LinkedList/: App.cpp  CMakeLists.txt  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
Stars-model view/: Astronaut.cpp  Astronaut.h  CMakeLists.txt  README.MD  Repository.cpp  Repository.h  Service.cpp  Service.h  Star.cpp  Star.h  StarFilterModel.cpp  StarFilterModel.h  drawing.cpp  drawing.h  drawing.ui  gui.cpp  gui.h  gui.ui  main.cpp  starsModel.cpp  starsModel.h
hangman_2/: date.txt  main.py
hangman_2/repo/: repo.py
hangman_2/services/: Controller.py
hangman_2/tests/: date.txt  test.py
hangman_2/ui/: ui.py
scramble/: fiel.txt  main.py
scramble/Tests/: file.txt  test_repo.py
scramble/domain/: domain.py
scramble/game_play/: gameplay.py
scramble/repo/: repo.py
scramble/ui/: ui.py
